[gd_scene load_steps=31 format=3 uid="uid://ees3wkka1sse"]

[ext_resource type="Script" path="res://Scripts/01_Burgers.gd" id="1_hbsg8"]
[ext_resource type="Texture2D" uid="uid://yrsm0dtwtepc" path="res://Sprites/Levels/01_Burgers/invis_button_153sq.png" id="2_1huu3"]
[ext_resource type="Texture2D" uid="uid://bkdk032rk15q8" path="res://Sprites/Transitions/bg_black.jpg" id="3_25ffw"]
[ext_resource type="Texture2D" uid="uid://k2ibrgclpslp" path="res://Sprites/Levels/01_Burgers/bg1.png" id="4_uuspb"]
[ext_resource type="Texture2D" uid="uid://b2svqa6u5jpq" path="res://Sprites/Transitions/bg_white.jpg" id="5_ejmqt"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="6_x85if"]
[ext_resource type="Texture2D" uid="uid://dmle1j61k3tpm" path="res://Sprites/Avatars/Boom/ss-boom.png" id="7_xivwc"]
[ext_resource type="Texture2D" uid="uid://cywhvg8ma5nu5" path="res://Sprites/Avatars/Boom/ss-boom-idle.png" id="8_ri1tp"]
[ext_resource type="Texture2D" uid="uid://b7xhjf5j6qv10" path="res://Sprites/Levels/01_Burgers/bottom_counter.png" id="10_11uuh"]
[ext_resource type="Texture2D" uid="uid://dfws6sm2ari1v" path="res://Sprites/Levels/01_Burgers/L_counter.png" id="10_u12vv"]
[ext_resource type="Texture2D" uid="uid://dvh1ovsne5ury" path="res://Sprites/Levels/01_Burgers/island1.png" id="11_nqtrk"]
[ext_resource type="Texture2D" uid="uid://c75fc8uova3er" path="res://Sprites/Levels/01_Burgers/ts_board_cheese.png" id="12_mbjjp"]
[ext_resource type="Texture2D" uid="uid://bacwyhxlcudi0" path="res://Sprites/Levels/01_Burgers/ts_board_bacon.png" id="13_tt7br"]
[ext_resource type="Texture2D" uid="uid://bcmr8352nrc6q" path="res://Sprites/Levels/01_Burgers/ts_board_lettuce.png" id="14_1lqul"]
[ext_resource type="Texture2D" uid="uid://n3kmqxtdc2h5" path="res://Sprites/Levels/01_Burgers/condiments.png" id="15_e1nox"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsov3"]
size = Vector2(150, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqkqv"]
atlas = ExtResource("7_xivwc")
region = Rect2(1504, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_o54wp"]
atlas = ExtResource("7_xivwc")
region = Rect2(1316, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wf3b"]
atlas = ExtResource("7_xivwc")
region = Rect2(1128, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xmcy"]
atlas = ExtResource("7_xivwc")
region = Rect2(940, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6w74"]
atlas = ExtResource("7_xivwc")
region = Rect2(752, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqrtd"]
atlas = ExtResource("7_xivwc")
region = Rect2(564, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv35o"]
atlas = ExtResource("7_xivwc")
region = Rect2(376, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_80psw"]
atlas = ExtResource("7_xivwc")
region = Rect2(188, 0, 188, 397)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r3ya"]
atlas = ExtResource("7_xivwc")
region = Rect2(0, 0, 188, 397)

[sub_resource type="SpriteFrames" id="SpriteFrames_oxu7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqkqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o54wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wf3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xmcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6w74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqrtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv35o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80psw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r3ya")
}],
"loop": true,
"name": &"L-walk",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ri1tp")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5scld"]
resource_name = "PanCamera"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("White BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hbte0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("White BG:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoo1i"]
_data = {
"PanCamera": SubResource("Animation_5scld"),
"RESET": SubResource("Animation_hbte0")
}

[sub_resource type="NavigationPolygon" id="NavigationPolygon_v4t1i"]
vertices = PackedVector2Array(590, 345, 622, 203, 622, 780, 589, 414, 267, 205, 245, 345, 198, 782, 198, 645, 485, 644, 475, 575, 244, 413, 122, 570, 122, 159, 267, 159)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 1, 0, 5), PackedInt32Array(2, 6, 7, 8), PackedInt32Array(3, 2, 8, 9), PackedInt32Array(10, 3, 9, 11), PackedInt32Array(10, 11, 12, 5), PackedInt32Array(4, 5, 12, 13)])
outlines = Array[PackedVector2Array]([PackedVector2Array(113, 149, 277, 150, 277, 195, 632, 193, 632, 790, 188, 793, 189, 636, 473, 634, 466, 585, 112, 580), PackedVector2Array(254, 403, 579, 404, 580, 355, 255, 355)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="01_Burgers" type="Node2D"]
script = ExtResource("1_hbsg8")
metadata/_edit_horizontal_guides_ = [648.0]
metadata/_edit_vertical_guides_ = [1152.0]

[node name="CMDs" type="Node2D" parent="."]

[node name="c_dd-left" type="TouchScreenButton" parent="CMDs"]
position = Vector2(300, 270)
scale = Vector2(0.509804, 0.810458)
texture_normal = ExtResource("2_1huu3")
shape = SubResource("RectangleShape2D_rsov3")

[node name="c_dd-right" type="TouchScreenButton" parent="CMDs"]
position = Vector2(384, 272)
scale = Vector2(0.503268, 0.803921)
texture_normal = ExtResource("2_1huu3")

[node name="c_ms-left" type="TouchScreenButton" parent="CMDs"]
position = Vector2(523, -81)
scale = Vector2(0.405229, 0.562091)
texture_normal = ExtResource("2_1huu3")

[node name="c_ms-right" type="TouchScreenButton" parent="CMDs"]
position = Vector2(594, -75)
scale = Vector2(0.405228, 0.522876)
texture_normal = ExtResource("2_1huu3")

[node name="c_s-left" type="TouchScreenButton" parent="CMDs"]
position = Vector2(309, -78)
scale = Vector2(0.535947, 0.581699)
texture_normal = ExtResource("2_1huu3")

[node name="c_s-right" type="TouchScreenButton" parent="CMDs"]
position = Vector2(430, -83)
scale = Vector2(0.542484, 0.601307)
texture_normal = ExtResource("2_1huu3")

[node name="c_ts-1" type="TouchScreenButton" parent="CMDs"]
position = Vector2(357, 121)
scale = Vector2(0.444444, 0.326797)
texture_normal = ExtResource("2_1huu3")

[node name="c_ts-2" type="TouchScreenButton" parent="CMDs"]
position = Vector2(445, 123)
scale = Vector2(0.45098, 0.313725)
texture_normal = ExtResource("2_1huu3")

[node name="c_ts-3" type="TouchScreenButton" parent="CMDs"]
position = Vector2(529, 122)
scale = Vector2(0.490196, 0.320261)
texture_normal = ExtResource("2_1huu3")

[node name="c_fs-1" type="TouchScreenButton" parent="CMDs"]
position = Vector2(703, 259)
scale = Vector2(0.542483, 0.431372)
texture_normal = ExtResource("2_1huu3")

[node name="c_fs-2" type="TouchScreenButton" parent="CMDs"]
position = Vector2(705, 330)
scale = Vector2(0.516339, 0.4183)
texture_normal = ExtResource("2_1huu3")

[node name="c_f-left" type="TouchScreenButton" parent="CMDs"]
position = Vector2(684, 115)
scale = Vector2(0.816993, 0.359477)
texture_normal = ExtResource("2_1huu3")

[node name="c_f-right" type="TouchScreenButton" parent="CMDs"]
position = Vector2(684, 173)
scale = Vector2(0.816993, 0.359477)
texture_normal = ExtResource("2_1huu3")

[node name="c_t" type="TouchScreenButton" parent="CMDs"]
position = Vector2(715, 427)
scale = Vector2(0.45098, 0.333333)
texture_normal = ExtResource("2_1huu3")

[node name="c_t2" type="TouchScreenButton" parent="CMDs"]
position = Vector2(716, 493)
scale = Vector2(0.45098, 0.333333)
texture_normal = ExtResource("2_1huu3")

[node name="c_bob" type="TouchScreenButton" parent="CMDs"]
position = Vector2(687, -3)
scale = Vector2(0.633987, 0.601307)
texture_normal = ExtResource("2_1huu3")

[node name="c_o1" type="TouchScreenButton" parent="CMDs"]
position = Vector2(248, 595)
scale = Vector2(0.745098, 1.05229)
texture_normal = ExtResource("2_1huu3")

[node name="c_o2" type="TouchScreenButton" parent="CMDs"]
position = Vector2(369, 594)
scale = Vector2(0.856209, 1.01307)
texture_normal = ExtResource("2_1huu3")

[node name="c_o3" type="TouchScreenButton" parent="CMDs"]
position = Vector2(511, 591)
scale = Vector2(0.718954, 1.10458)
texture_normal = ExtResource("2_1huu3")

[node name="c_o4" type="TouchScreenButton" parent="CMDs"]
position = Vector2(642, 592)
scale = Vector2(0.666667, 1.06536)
texture_normal = ExtResource("2_1huu3")

[node name="Black BG" type="TextureRect" parent="."]
visible = false
z_index = -100
y_sort_enabled = true
offset_left = -56.0
offset_right = 1864.0
offset_bottom = 648.0
pivot_offset = Vector2(899, -56)
texture = ExtResource("3_25ffw")
expand_mode = 2

[node name="Main BG" type="TextureRect" parent="."]
offset_left = 44.0
offset_top = -579.0
offset_right = 942.0
offset_bottom = 1416.0
texture = ExtResource("4_uuspb")
expand_mode = 1
stretch_mode = 4

[node name="White BG" type="TextureRect" parent="."]
visible = false
z_index = 100
y_sort_enabled = true
offset_left = -56.0
offset_right = 1864.0
offset_bottom = 648.0
pivot_offset = Vector2(899, -56)
texture = ExtResource("5_ejmqt")

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 1
position = Vector2(257, -35)
scale = Vector2(1, 1.00001)
script = ExtResource("6_x85if")
metadata/_edit_group_ = true

[node name="anim" type="AnimatedSprite2D" parent="Player"]
scale = Vector2(0.640957, 0.640957)
sprite_frames = SubResource("SpriteFrames_oxu7q")
animation = &"idle"

[node name="NavAg" type="NavigationAgent2D" parent="Player"]
path_desired_distance = 3.0
target_desired_distance = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(493, 323)
scale = Vector2(400, 400)

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uoo1i")
}
speed_scale = 0.555

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
position = Vector2(48, -214)
navigation_polygon = SubResource("NavigationPolygon_v4t1i")

[node name="Island1" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(464, 182.247)
scale = Vector2(0.498371, 0.494845)
texture = ExtResource("11_nqtrk")

[node name="LCounter" type="Sprite2D" parent="."]
z_index = 10
position = Vector2(495, 313)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_u12vv")

[node name="BottomCounter" type="Sprite2D" parent="."]
z_index = 15
position = Vector2(205, 644)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_11uuh")
offset = Vector2(602, 30)

[node name="TsBoardCheese" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(402, 140)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_mbjjp")
offset = Vector2(-14, -2)

[node name="TsBoardBacon" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(479, 141)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_tt7br")

[node name="TsBoardLettuce" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(584, 146)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_1lqul")
offset = Vector2(-32, -16)

[node name="Condiments" type="Sprite2D" parent="."]
z_index = 15
position = Vector2(504, 620)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_e1nox")
offset = Vector2(-110, -172)

[connection signal="navigation_finished" from="Player/NavAg" to="Player" method="_on_nav_ag_navigation_finished"]
[connection signal="target_reached" from="Player/NavAg" to="Player" method="_on_nav_ag_target_reached"]
